Tooltip was not showing correctly on mouseenter...
...plus updated libs to the maximum available version

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body,fieldset,ol,ul,h1,h2,input{font-family:Arial;margin:0;padding:0;color:#333}
 body{font-size:75%}
 fieldset{width:500px;margin:0 auto;border:none}
 ol,ul{list-style-type:none}
-h1,h2,label{text-shadow: 0px 0px 1px #333}
 h1{padding:30px 0 30px 140px;margin-top:10px;font-size:2.6em;background-image:url(../img/icon_128.png);background-position:left top;background-repeat:no-repeat}
 h2{font-size:1.4em;margin-bottom:15px}
 label{display:inline-block;width:10em;font-weight:bold}
